publish initial version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_bottom_navigation
-description: A new Flutter package project.
-version: 0.0.1
-homepage:
+description: A simple wrapper for flutter's BottomNavigationBar.
+version: 1.0.0
+repository: https://github.com/mj12358/flutter-bottom-navigation
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: ">=2.18.4 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
