--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_bottom_navigation
-description: A simple wrapper for flutter's BottomNavigationBar.
-version: 1.0.0
+description: A simple wrapper for flutter's BottomNavigationBar that handles the current index for you.
+version: 1.0.1
 repository: https://github.com/mj12358/flutter-bottom-navigation
 
 environment:
@@ -12,6 +12,6 @@ dependencies:
     sdk: flutter
 
 dev_dependencies:
+  dart_lintz: ^1.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.1
